--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -123,7 +123,11 @@ footer {
         grid-template-columns: repeat(2, 1fr); /* Stack to 2 columns */
     }
 }
-
+/* @media screen and (max-width: 768px) {
+    .flex { 
+        flex-direction: column;
+        }
+} */
 
 
 .copyright_sec {
