--- a/src/Components/Product/product.module.css
+++ b/src/Components/Product/product.module.css
@@ -1,5 +1,8 @@
 .card_container {
-  width: 250px;
+  /* width: 250px; */
+  width: 200px;
+  margin: 10px;
+  
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 10px;
   color: black;
@@ -15,7 +18,7 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
 
-/* Image styling */
+
 .product_image {
   width: 100%;
   height: 100%;
@@ -23,22 +26,21 @@
 }
 .product_image {
   width: 100%;
-  height: 200px; /* Ensures a uniform height */
+  height: 200px;
   object-fit: contain;
 }
 
-/* Product info container */
+
 .product_info {
   margin-top: 10px;
 }
 
-/* Product title */
 .product_title {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
 }
 
-/* Rating section */
+
 .rating {
   display: flex;
   align-items: center;
@@ -48,32 +50,13 @@
   margin-left: 8px;
 }
 
-/* Price styling */
+
 .product_price {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   color: #050505;
 }
 
-/* Button styling */
-/* .button {
-  display: block; 
-  width: 100%;
-  margin: 10px 0;
-  padding: 5px 10px;
-  font-weight: 700;
-  background-color: #ff9900;
-  color: white;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  position: relative;
-}
-
-
-.button:hover {
-  background-color: var(--primary-color);
-} */
 
 .button {
   display: block;
@@ -81,7 +64,6 @@
   margin: 10px 0;
   padding: 5px 10px;
   font-weight: 700;
-  /* background-color: var(--primary-color); */
   color: white;
   border: none;
   border-radius: 30px;
@@ -98,12 +80,13 @@
     align-items: center;
     padding: 10px 0;
 }
-.products_container {
+.products_container { 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
     max-width: 1450px;
     margin: 100px auto;
-    gap: 50px;
+    gap: 15px;
+    /* gap: 50px; */
     justify-items: center;
 }
 .products.container section{
