--- a/src/Components/Carousel/Carousel.module.css
+++ b/src/Components/Carousel/Carousel.module.css
@@ -1,41 +1,68 @@
-
-.carousel-container {
-    margin-top: 50px; 
-    padding-top: 20px;
+.carouselContainer {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
 }
-
 
 body {
-    padding-top: 116px; 
+    padding-top: 116px;
+    margin-right: 0px; 
+    overflow-x: hidden; 
 }
-
-
-.carousel .slide img {
-    width: 100%;
-    height: auto;
-    object-fit: cover; 
-}
-
 
 .carousel {
     max-width: 100%;
-    height: 500px; 
+    height: 500px;
     overflow: hidden;
+    position: relative;
 }
 
-.carousel .slide {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.carousel .slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.hero_img {
+/* Arrows Styling */
+.customArrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: white;
+    border: none;
+    padding: 30px;
+    cursor: pointer;
+    z-index: 3;
+    font-size: 48px; 
+    background: none; 
+}
+.customArrow svg {
+    font-size: 64px; 
+}
+
+.customArrow.prev {
+    left: 45px;
+}
+
+.customArrow.next {
+    right: 45px;
+}
+
+.carousel .carousel-status {
+    display: none;
+}
+
+.carousel .control-dots {
+    display: none;
+}
+
+.heroImg {
     position: relative;
     width: 100%;
     height: 100%;
 }
 
-.hero_img::before {
+.heroImg::before {
     content: "";
     position: absolute;
     bottom: 0;
