--- a/src/Components/LowerHeader/LowerHeader.css
+++ b/src/Components/LowerHeader/LowerHeader.css
@@ -11,7 +11,6 @@
     min-height: 40px;
 }
 
-/* Grouping Menu Icon and "All" */
 .header__menu-container {
     display: flex;
     align-items: center;
@@ -21,7 +20,7 @@
     padding: 10px 1px;
     border: 1px solid transparent;
     transition: border 0.3s ease-in-out, background 0.3s ease-in-out;
-    height: 100%; /* Ensures full alignment */
+    height: 100%;
 }
 
 .header__menu-container:hover {
@@ -40,7 +39,6 @@
     width: 100%;
 }
 
-/* Ensures text alignment & visibility */
 .header__bottom-links {
     display: flex;
     align-items: center;
@@ -60,14 +58,13 @@
     padding: 10px 8px;
     font-weight: normal;
     transition: border 0.2s ease-in-out, background 0.2s ease-in-out;
-    height: 100%; /* Prevents text shifting */
+    height: 100%; 
 }
 
 .header__bottom-links li:hover {
     border: 1px solid white;
 }
 
-/* Responsive Fixes */
 @media (max-width: 768px) {
     .header__bottom {
         justify-content: space-between;
