--- a/src/Components/Product/product.module.css
+++ b/src/Components/Product/product.module.css
@@ -1,32 +1,30 @@
+
 .card_container {
-  /* width: 250px; */
-  width: 200px;
-  margin: 10px;
-  
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  padding: 10px;
-  color: black;
-  text-decoration: none;
-  position: relative;
-  background-color: white;
-  border-radius: 8px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 200px;
+    margin: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+    position: relative;
+    background-color: white;
+    border-radius: 8px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .card_container:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    transform: translateY(-5px);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
 }
 
-
 .product_image {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
 }
 .product_image {
   width: 100%;
-  height: 200px;
+  height: 150px;
   object-fit: contain;
 }
 
@@ -85,10 +83,14 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
     max-width: 1450px;
     margin: 100px auto;
-    gap: 15px;
-    /* gap: 50px; */
+    gap: 5px;
     justify-items: center;
+    padding: 0 51px;
+    margin: 45px 0;
+    /* margin-left: -50px; */
 }
 .products.container section{
     margin: 0 auto;
 }
+
+
