--- a/src/Pages/Cart/Cart.module.css
+++ b/src/Pages/Cart/Cart.module.css
@@ -116,7 +116,7 @@
     flex: 1;
 }
 
-.quantity_control {
+/* .quantity_control {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -127,6 +127,34 @@
     height: 30px;
     border: none;
     background-color: #f0c14b;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.quantity_control span {
+    font-size: 16px;
+    font-weight: bold;
+} */
+
+
+
+
+
+.quantity_control {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    gap: 5px; 
+}
+
+.quantity_control button {
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent; 
     color: black;
     font-size: 16px;
     cursor: pointer;
